# Calculate-Infinite

./: All.qrc  CMakeLists.txt  README.md  dead.cpp  dead.h  dead.ui  infinitemode.cpp  infinitemode.h  infinitemode.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting.cpp  setting.h  setting.ui  welcome.cpp  welcome.h  welcome.ui
